--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: your-theme-name
+Theme Name: nga-osaka
 License: GPLv2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: your-theme-name
+Text Domain: 日本酒ゴーアラウンド大阪
 Template: mimizuku
 */
