--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -32,7 +32,7 @@
       display: block;
       width: 1.2rem;
       height: 1.2rem;
-      margin-top: .2rem;
+      margin-top: 0.2rem;
       margin-right: 5px;
       text-align: center;
       line-height: 1.2;
