--- a/src/css/_single-map.scss
+++ b/src/css/_single-map.scss
@@ -3,3 +3,12 @@
   width: 100%;
   height: 500px;
 }
+
+.marker-balloon a {
+  color: #666;
+  text-decoration: none;
+}
+
+.marker-balloon a:hover {
+  color: #333;
+}
