--- a/src/css/_archive-store.scss
+++ b/src/css/_archive-store.scss
@@ -15,7 +15,7 @@
 //店舗一覧ページ
 ._c-entries__item-store {
   margin-bottom: 15px;
-  padding: 1rem 1.5rem;
+  padding: .5rem .5rem;
   border: solid 1px $_color_main2;
   box-shadow: 0 1px 1px $_color_main2;
   a {
@@ -24,10 +24,18 @@
     &:hover {
       text-decoration: underline;
     }
+    @include _media-min(md) {
+      padding: 1rem 1.5rem;
+    }
   }
   ._c-entry-summary__title {
     margin-bottom: 10px;
-    font-size: 1.5rem;
+    padding-left: .5rem;
+    font-size: 1.1rem;
+    @include _media-min(md) {
+      padding-left: 0;
+      font-size: 1.5rem;
+    }
   }
   ._c-entry-summary__info-photo {
     display: flex;
