--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -52,8 +52,9 @@
       counter-increment: my-counter;
       background-color: $_color_main2;
       color: white;
-      display: block;
-      width: 1.2rem;
+      display: block; // width: 1.2rem;
+      padding-left: .3rem;
+      padding-right: .3rem;
       height: 1.2rem;
       margin-top: 0.2rem;
       margin-right: 5px;
