--- a/src/css/_archive-store.scss
+++ b/src/css/_archive-store.scss
@@ -145,6 +145,12 @@
   }
 }
 
+[data-class="capacity"] {
+  .store-capacity {
+    font-weight: bold;
+  }
+}
+
 [data-sort="open"] {
   @include sort-order('早い順', '遅い順');
 }
@@ -155,4 +161,8 @@
 
 [data-sort="price"] {
   @include sort-order('安い順', '高い順');
+}
+
+[data-sort="capacity"] {
+  @include sort-order('少ない順', '多い順');
 }
