--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -1,8 +1,8 @@
 //index キーヴィジュアル
 .index-keyvisual {
   margin-bottom: 20px;
-  height: 300px;
-  min-height: 300px;
+  height: 200px;
+  min-height: 200px;
   background-size: 2.985vw;
   background-image: linear-gradient( 90deg, #fff100 0%, #fff100 50%, #fdde00 50%, #fdde00 100%);
   @include _media-min(md) {
@@ -71,4 +71,27 @@
       border-radius: 50%;
     }
   }
+}
+
+.storelist-banner {
+  width: 600px;
+  max-width: 100%;
+  &:hover {
+    opacity: .8;
+  }
+}
+
+.index-store-list {
+  margin: 0 -100%;
+  padding: 3rem 100%;
+  background: #efefef;
+  ul {
+    list-style: none;
+  }
+}
+
+.home section h2::first-letter {
+  color: $_color_main1;
+  font-size: 1.2em;
+  text-shadow: 1px 1px 1px $_color_main2;
 }
