--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -4,7 +4,8 @@
   height: 200px;
   min-height: 200px;
   background-size: 2.985vw;
-  background-image: linear-gradient( 90deg, #fff100 0%, #fff100 50%, #fdde00 50%, #fdde00 100%);
+  background-image: linear-gradient(90deg, #fff100 0%, #fff100 50%, #fdde00 50%, #fdde00 100%);
+
   @include _media-min(md) {
     height: 400px;
     background-size: 20px;
@@ -30,6 +31,7 @@
 
 @include _media-max(sm) {
   .index--description {
+
     p,
     h2 {
       text-align: left;
@@ -42,6 +44,7 @@
   padding: 1rem;
   border: solid 1px $_color_main2;
   box-shadow: 0 1px 2px $_color_main2;
+
   h3 {
     font-size: 1.5rem;
   }
@@ -52,9 +55,11 @@
   list-style: none;
   text-align: left;
   margin: 1rem 0 1.5rem;
+
   li {
     display: flex;
     margin-bottom: 5px;
+
     &::before {
       content: counter(my-counter);
       counter-increment: my-counter;
@@ -76,6 +81,7 @@
 .storelist-banner {
   width: 600px;
   max-width: 100%;
+
   &:hover {
     opacity: .8;
   }
@@ -85,8 +91,18 @@
   margin: 0 -100%;
   padding: 3rem 100%;
   background: #efefef;
+
   ul {
     list-style: none;
+  }
+
+  a {
+    color: #333;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
