--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,6 +8,7 @@ $_color_lightgray: #eee;
 @import 'store';
 @import 'single-map';
 @import 'index';
+
 //ヘッダー
 ._l-header {
   box-shadow: 0 1px 1px $_color_main1;
@@ -16,6 +17,7 @@ $_color_lightgray: #eee;
 ._c-site-branding__title {
   font-size: 4.5vw;
   line-height: 50px;
+
   a {
     color: $_color_main1;
   }
@@ -23,6 +25,7 @@ $_color_lightgray: #eee;
 
 ._c-site-branding__title-img {
   width: 200px;
+
   @include _media-max(sm) {
     width: 150px;
   }
@@ -59,6 +62,7 @@ $_color_lightgray: #eee;
 .fa-twitter,
 .fa-facebook {
   transition: transform .2s ease-out;
+
   &:hover {
     transform: scale(1.1);
   }
@@ -68,6 +72,7 @@ $_color_lightgray: #eee;
 ._p-global-nav ._c-navbar__item>a {
   color: $_color_main1;
   position: relative;
+
   &::before,
   &::after {
     display: block;
@@ -80,11 +85,14 @@ $_color_lightgray: #eee;
     background: $_color_main2;
     transition: .3s ease-out;
   }
+
   &::after {
     left: 50%;
   }
+
   &:hover {
     color: $_color_main2;
+
     &::before,
     &::after {
       width: 50%;
@@ -100,6 +108,7 @@ $_color_lightgray: #eee;
 ._c-breadcrumbs__item a {
   color: $_color_main2;
   text-decoration: none;
+
   :hover {
     color: $_color_main1;
   }
@@ -121,6 +130,7 @@ $_color_lightgray: #eee;
     font-size: 2rem;
     text-align: center;
   }
+
   h1::after {
     display: block;
     position: absolute;
@@ -145,6 +155,7 @@ $_color_lightgray: #eee;
   align-items: center;
   white-space: nowrap;
   color: $_color_main1;
+
   &::before,
   &::after {
     display: block;
@@ -153,9 +164,11 @@ $_color_lightgray: #eee;
     height: 2px;
     background: $_color_main1;
   }
+
   &::before {
     margin-right: .25rem;
   }
+
   &::after {
     margin-left: .25rem;
   }
@@ -174,6 +187,12 @@ h3 {
   height: auto;
 }
 
+hr {
+  border: none;
+  border-top: solid 1px $_color_main2;
+  margin: .5rem 0;
+}
+
 //サイトバー
 .sidebar_box {
   margin-bottom: 2rem;
@@ -188,11 +207,13 @@ h3 {
 
 #menu-area-store {
   list-style: none;
+
   a {
     text-decoration: none;
     font-size: 1.2rem;
     color: $_color_main2;
     transition: color .3s ease-out;
+
     &:hover {
       text-decoration: underline;
       color: $_color_main1;
@@ -210,9 +231,11 @@ h3 {
   padding-top: 20px;
   background: $_color_main1;
   color: white;
+
   a {
     color: white;
   }
+
   ._c-row {
     margin-top: 1rem;
   }
