--- a/src/css/_single-map.scss
+++ b/src/css/_single-map.scss
@@ -12,3 +12,17 @@
 .marker-balloon a:hover {
   color: #333;
 }
+
+.btn.map-reset {
+  display: inline-block;
+  margin-top: .5rem;
+  padding: .25rem .75rem;
+  background: $_color_main2;
+  color: white;
+  cursor: pointer;
+  transition: .3s ease-out;
+
+  &:hover {
+    background: $_color_main1;
+  }
+}
